[package]
name = "peaq-pallet-did"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
hex-literal = "0.3.3"

[dependencies]
parity-scale-codec = { workspace = true,  default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true}
frame-support = { workspace = true, default-features = false}
frame-system = { workspace = true, default-features = false}
scale-info = { workspace = true, default-features = false, features = ["derive"]}
sp-runtime = { workspace = true, default-features = false}
sp-core = { workspace = true, default-features = false}
sp-rpc = { workspace = true, default-features = false, optional = true}
sp-io = { workspace = true, default-features = false}
sp-std = { workspace = true, default-features = false}
pallet-timestamp = { workspace = true, default-features = false}
num-traits = { workspace = true, default-features = false }


[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
	"sp-runtime/std",
    "sp-std/std",
	"sp-io/std",
	"sp-rpc",
    "sp-core/std",
	"pallet-timestamp/std",
	"num-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
