[package]
name = "peaq-pallet-did-rpc"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }
jsonrpc-derive = { workspace = true }

peaq-pallet-did-runtime-api = { path = "./runtime-api" }
peaq-pallet-did = { path = "../pallet/" }
serde = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-rpc = { workspace = true }
sp-runtime = { workspace = true }

jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }
