[package]
name = "peaq-pallet-did-runtime-api"
version = "0.0.3"
edition = "2021"
description = 'A pallet that handles peaq DID managment on peaq network.'
authors = ['peaq network <https://github.com/peaqnetwork>']
homepage = 'https://peaq.network/'
license = 'Apache-2.0'
publish = false
repository = 'https://github.com/peaqnetwork/peaq-pallet-did/'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.2.2'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.43'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/peaqnetwork/substrate'
branch = 'peaq-polkadot-v0.9.43'

[dependencies.peaq-pallet-did]
default-features = false
path = '../../pallet'


[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    'codec/std',
	"sp-api/std",
	"sp-std/std",
	"peaq-pallet-did/std",
]
