[package]
name = "peaq-pallet-did-runtime-api"
edition = { workspace = true }
version = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.2.2"

[dependencies.sp-api]
default-features = false
git = "https://github.com/peaqnetwork/substrate"
branch = "peaq-polkadot-v0.9.43"

[dependencies.sp-std]
default-features = false
git = "https://github.com/peaqnetwork/substrate"
branch = "peaq-polkadot-v0.9.43"

[dependencies.peaq-pallet-did]
default-features = false
path = "../../pallet"


[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "codec/std",
	"sp-api/std",
	"sp-std/std",
	"peaq-pallet-did/std",
]
